# cute

./: .gitignore  .travis.yml  CMakeConfigCompilers.cmake  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cute/: CMakeLists.txt  capture.hpp  cleanup_guard.hpp  context.hpp  cute.hpp  decomposer.hpp  eval_context.hpp  exception.hpp  macros.hpp  test.hpp  test_registry.hpp  test_result.hpp  test_suite_result.hpp  thread.hpp  tick.hpp  utils.hpp  utils_delete_folder.hpp  utils_file.hpp
cute/detail/: decomposer.hpp  eval_context.hpp  exception.hpp  macros_impl.hpp  utils.hpp  utils_file.hpp
cute/reporters/: ide_reporter.hpp  reporter_dot_progress.hpp  reporter_ide.hpp  reporter_junit.hpp
docs/: multi_threaded_tests.md  temp_folders.md  test_runners_and_reporters.md  writing_tests.md
test/: CMakeLists.txt  cute_core_unittests.cpp  cute_decomposer_unittests.cpp  cute_file_unittests.cpp  cute_thread_unittests.cpp  cute_unittests.cpp  cute_unittests.hpp  main.cpp
